z-index for on-map widgets no longer cascades to all descendants

--- a/client/stylesheets/containers/_app.scss
+++ b/client/stylesheets/containers/_app.scss
@@ -51,8 +51,8 @@ body {
   user-select: none;
 }
 
-.widgets * {
-  z-index: 4;
+.widgets > * {
+  z-index: 1;
 }
 
 .accessmapicon-primary,
